work on control bar

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,13 +9,13 @@ Size=82,54
 Collapsed=0
 
 [Window][MIDI Monitor]
-Pos=32,651
+Pos=31,651
 Size=721,335
 Collapsed=0
 
 [Window][Sequencer]
-Pos=177,65
-Size=1255,801
+Pos=154,65
+Size=1326,738
 Collapsed=0
 
 [Window][Harmony model]
@@ -24,7 +24,7 @@ Size=248,94
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1267,56
+Pos=1188,77
 Size=694,692
 Collapsed=0
 
@@ -74,7 +74,7 @@ Size=398,153
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1336,966
+Pos=1267,838
 Size=694,328
 Collapsed=0
 
@@ -91,6 +91,11 @@ Collapsed=0
 [Window][Extra]
 Pos=245,297
 Size=129,117
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=1420,841
+Size=338,333
 Collapsed=0
 
 [Table][0x647CCD82,4]
