Finished control bar logic and added harmony drag sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ set(SOURCES
         Application/Song.cpp Application/Song.h
         Theory/TimeDivision.h Theory/TimeDivision.cpp
         Theory/Note/RootNote.cpp Theory/Note/RootNote.h
-        Theory/Key/Key.cpp Theory/Key/Key.h Theory/Key/IntervalSequence.cpp Theory/Key/IntervalSequence.h Theory/Key/MelodicMinor.cpp Theory/Key/MelodicMinor.h Director/Harmonies/SingleHarmonies/ModulationHarmony.cpp Director/Harmonies/SingleHarmonies/ModulationHarmony.h Director/Harmonies/SingleHarmonies/SingleHarmony.cpp Director/Harmonies/SingleHarmonies/SingleHarmony.h Director/Harmonies/SingleHarmonies/RandomHarmony.cpp Director/Harmonies/SingleHarmonies/RandomHarmony.h)
+        Theory/Key/Key.cpp Theory/Key/Key.h Theory/Key/IntervalSequence.cpp Theory/Key/IntervalSequence.h Theory/Key/MelodicMinor.cpp Theory/Key/MelodicMinor.h Director/Harmonies/SingleHarmonies/ModulationHarmony.cpp Director/Harmonies/SingleHarmonies/ModulationHarmony.h Director/Harmonies/SingleHarmonies/SingleHarmony.cpp Director/Harmonies/SingleHarmonies/SingleHarmony.h Director/Harmonies/SingleHarmonies/RandomHarmony.cpp Director/Harmonies/SingleHarmonies/RandomHarmony.h UI/KeyColor.cpp UI/KeyColor.h MIDI/IO/IOType.h)
 
 set(IMGUI
         imgui/imgui.cpp imgui/imgui.h
