--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=721,335
 Collapsed=0
 
 [Window][Sequencer]
-Pos=154,65
-Size=1326,738
+Pos=3,8
+Size=1715,630
 Collapsed=0
 
 [Window][Harmony model]
@@ -24,8 +24,8 @@ Size=248,94
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1188,77
-Size=694,692
+Pos=1156,149
+Size=698,692
 Collapsed=0
 
 [Window][Example: Custom rendering]
@@ -69,12 +69,12 @@ Size=520,600
 Collapsed=0
 
 [Window][Piano]
-Pos=1446,770
+Pos=225,832
 Size=398,153
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1267,838
+Pos=1155,687
 Size=694,328
 Collapsed=0
 
@@ -94,8 +94,8 @@ Size=129,117
 Collapsed=0
 
 [Window][Dear ImGui Stack Tool]
-Pos=1420,841
-Size=338,333
+Pos=875,805
+Size=630,178
 Collapsed=0
 
 [Table][0x647CCD82,4]
@@ -161,14 +161,14 @@ Column 4  Weight=1.0000
 Column 5  Weight=-1.0000
 
 [Table][0x861D378E,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
+Column 0  Weight=0.9984
+Column 1  Weight=0.8571
+Column 2  Weight=1.1445
 
 [Table][0x1F146634,3]
 RefScale=16
-Column 0  Width=55
-Column 1  Width=55
+Column 0  Width=195
+Column 1  Width=272
 Column 2  Width=55
 
 [Table][0x8DFA6E86,2]
@@ -195,4 +195,26 @@ Column 2  Width=180
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
+
+[Table][0x45EBF249,4]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+
+[Table][0x20DF7A63,4]
+RefScale=16
+Column 0  Width=32 Sort=0v
+Column 1  Width=51
+Column 2  Width=41
+Column 3  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=16
+Column 0  Width=32 Sort=0v
+Column 1  Width=51
+Column 2  Width=76
+Column 3  Width=66
+Column 4  Weight=1.0000
+Column 5  Width=-1
 
