--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ set(SOURCES
         UI/KeyColor.cpp UI/KeyColor.h
         MIDI/IO/IOType.h
         Sequencer/Metronome.cpp Sequencer/Metronome.h
-        MIDI/Messages/Instrument.cpp MIDI/Messages/Instrument.h UI/Font.cpp UI/Font.h Director/Harmonies/CanonHarmony.cpp Director/Harmonies/CanonHarmony.h)
+        MIDI/Messages/Instrument.cpp MIDI/Messages/Instrument.h UI/Font.cpp UI/Font.h Director/Harmonies/CanonHarmony.cpp Director/Harmonies/CanonHarmony.h Sequencer/Cycle.cpp Sequencer/Cycle.h Application/Take.cpp Application/Take.h)
 
 set(IMGUI
         imgui/imgui.cpp imgui/imgui.h
