--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=82,54
 Collapsed=0
 
 [Window][MIDI Monitor]
-Pos=1187,656
+Pos=548,548
 Size=721,335
 Collapsed=0
 
@@ -24,8 +24,8 @@ Size=248,94
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1128,199
-Size=698,692
+Pos=156,642
+Size=705,328
 Collapsed=0
 
 [Window][Example: Custom rendering]
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][Example: Auto-resizing window]
 Pos=60,60
-Size=405,372
+Size=405,352
 Collapsed=0
 
 [Window][###AnimatedTitle]
@@ -74,7 +74,7 @@ Size=366,176
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1198,305
+Pos=454,656
 Size=694,328
 Collapsed=0
 
@@ -84,7 +84,7 @@ Size=430,450
 Collapsed=0
 
 [Window][Example: Console]
-Pos=57,59
+Pos=57,58
 Size=520,600
 Collapsed=0
 
@@ -101,6 +101,16 @@ Collapsed=0
 [Window][Dear ImGui Style Editor]
 Pos=236,2
 Size=375,1021
+Collapsed=0
+
+[Window][Test]
+Pos=60,60
+Size=243,112
+Collapsed=0
+
+[Window][Sub]
+Pos=75,203
+Size=228,185
 Collapsed=0
 
 [Table][0x647CCD82,4]
@@ -202,8 +212,8 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Table][0x45EBF249,4]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+Column 0  Weight=1.2156
+Column 1  Weight=0.7844
 Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
